--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -9,6 +9,12 @@
     gap: 0;
   }
 
+  .errorText {
+    font-family: Mansfield;
+    font-size: 12px;
+    color: var(--colorRed);
+  }
+
   input {
     width: 100%;
     height: 40px;
