feat: se agrego home, se agrego header del full layout, y se agregaron opciones principales del home

--- a/src/layouts/authLayout/authLayout.scss
+++ b/src/layouts/authLayout/authLayout.scss
@@ -7,4 +7,12 @@
   padding: 24px;
   grid: "header" auto "main" 1fr;
   gap: 32px;
+
+  .headerAuthLayout {
+    grid-area: header;
+  }
+
+  .authLayoutChildren{
+    grid-area: main;
+  }
 }
