--- a/src/layouts/authLayout/components/header/header.scss
+++ b/src/layouts/authLayout/components/header/header.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
 
-  .headerIcon {
+  .headerLogo {
     cursor: pointer;
     display: flex;
     justify-content: center;
