correcciones de estilos

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -12,7 +12,7 @@
   .errorText {
     font-family: Mansfield;
     font-size: 12px;
-    color: var(--colorRed);
+    color: var(--colorBlack);
   }
 
   input {
