--- a/src/pages/private/home/home.scss
+++ b/src/pages/private/home/home.scss
@@ -2,9 +2,10 @@
     height: 100%;
     display: flex;
     padding: 4px;
+    padding-bottom: 8px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 80px;
-    border-bottom: 2px solid var(--colorBlack);
+    border-bottom: 4px solid var(--colorBlack);
+    gap: 120px;
 }
