--- a/src/layouts/fullLayout/fullLayout.scss
+++ b/src/layouts/fullLayout/fullLayout.scss
@@ -2,9 +2,10 @@
     width: 100%;
     min-height: fit-content;
     height: 100%;
+    overflow: hidden;
     display: grid;
     background-color: var(--colorWhite);
-    grid: "header" auto "main" 1fr;
+    grid: 'header' auto 'main' 1fr;
 
     .headerFullLayout {
         grid-area: header;
@@ -12,6 +13,26 @@
 
     .fullLayoutChildren {
         grid-area: main;
-        padding: 8px 6px;
+        overflow: auto;
+        padding: 8px 4px;
+
+        &::-webkit-scrollbar {
+            width: 15px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: var(--colorWhite);
+            border-left: 2px solid var(--colorBlack);
+            border-right: 2px solid var(--colorBlack);
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: var(--colorBlack);
+            border-radius: 0;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background: darkgray;
+        }
     }
 }
