--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,57 @@
 @font-face {
-  font-family: "Mansfield-ExtraLight";
-  src: url("../src/assets/fonts/mansfield/Mansfield-Extra-Light.ttf");
+    font-family: "Mansfield-ExtraLight";
+    src: url("../src/assets/fonts/mansfield/Mansfield-Extra-Light.ttf");
 }
 
 @font-face {
-  font-family: "Mansfield-Light";
-  src: url("../src/assets/fonts/mansfield/Mansfield-Light.ttf");
+    font-family: "Mansfield-Light";
+    src: url("../src/assets/fonts/mansfield/Mansfield-Light.ttf");
 }
 
 @font-face {
-  font-family: "Mansfield";
-  src: url("../src/assets/fonts/mansfield/Mansfield.ttf");
+    font-family: "Mansfield";
+    src: url("../src/assets/fonts/mansfield/Mansfield.ttf");
 }
 
 @font-face {
-  font-family: "Mansfield-SemiBold";
-  src: url("../src/assets/fonts/mansfield/Mansfield-Semi-Bold.ttf");
+    font-family: "Mansfield-SemiBold";
+    src: url("../src/assets/fonts/mansfield/Mansfield-Semi-Bold.ttf");
 }
 
 @font-face {
-  font-family: "Mansfield-Bold";
-  src: url("../src/assets/fonts/mansfield/Mansfield-Bold.ttf");
+    font-family: "Mansfield-Bold";
+    src: url("../src/assets/fonts/mansfield/Mansfield-Bold.ttf");
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  width: 100%;
-  height: 100vh;
-  scroll-behavior: smooth;
-  background-color: #f8f8f8;
+    width: 100%;
+    height: 100vh;
+    scroll-behavior: smooth;
+    background-color: #f8f8f8;
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  font-family: "Mansfield", "Roboto";
-  margin: 0;
+    width: 100%;
+    height: 100%;
+    font-family: "Mansfield", "Roboto";
+    margin: 0;
 }
 
 #root {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 :root {
-  --colorBlack: #181b32;
-  --colorWhite: #ffffff;
-  --colorCyan: #3fbdf1;
-  --colorYellow: #f5bd33;
+    --colorBlack: #181b32;
+    --colorWhite: #ffffff;
+    --colorCyan: #88aaee;
+    --colorRed: rgb(255, 107, 107);
+    --colorYellow: rgb(254, 242, 232);
 }
