--- a/src/components/cardAppointment/cardAppointment.scss
+++ b/src/components/cardAppointment/cardAppointment.scss
@@ -15,7 +15,7 @@
         flex-direction: column;
         align-items: center;
         border: 2px solid var(--colorBlack);
-        padding: 8px;
+        padding: 12px;
         gap: 4px;
 
         .cardAppointmentDay {
@@ -42,7 +42,7 @@
         flex-direction: column;
         gap: 4px;
         width: 100%;
-        padding: 0 16px;
+        padding: 0 4px;
 
         .cardAppointmentDoctor {
             font-family: Mansfield-SemiBold;
@@ -66,5 +66,41 @@
     &:active {
         transform: translate(2px, 2px);
         box-shadow: 2px 2px 0px var(--colorBlack);
+    }
+}
+
+.cardAppointmentModal {
+    margin-bottom: 12px;
+    
+    .cardAppointmentModalTitle {
+        font-family: Mansfield-SemiBold;
+        font-size: 24px;
+        color: var(--colorBlack);
+        text-align: center;
+        margin-bottom: 8px;
+    }
+
+    .cardAppointmentModalDetails {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px 0;
+        border-bottom: 1px solid var(--colorBlack);
+
+        &:last-child {
+            border-bottom: none;
+        }
+
+        .cardAppointmentModalLabel {
+            font-family: Mansfield-SemiBold;
+            font-size: 16px;
+            color: var(--colorBlack);
+        }
+
+        .cardAppointmentModalValue {
+            font-family: Mansfield-SemiBold;
+            font-size: 16px;
+            color: var(--colorBlack);
+        }
     }
 }
