--- a/src/components/alertModal/alertModal.scss
+++ b/src/components/alertModal/alertModal.scss
@@ -5,6 +5,7 @@
     align-items: center;
 
     .alertModalContainer {
+        outline: none;
         width: max-content;
         min-width: 300px;
         max-width: 400px;
