--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -12,6 +12,12 @@
     box-shadow: 4px 4px 0px var(--colorBlack);
     transition: all 0.3s ease;
     cursor: pointer;
+
+    &:disabled {
+        opacity: 0.8;
+        box-shadow: none;
+        pointer-events: none;
+    }
 }
 
 .buttonCyan {
