--- a/src/pages/private/myAppointments/myAppointments.scss
+++ b/src/pages/private/myAppointments/myAppointments.scss
@@ -6,8 +6,8 @@
     width: 100%;
     height: auto;
     border: 2px solid var(--colorBlack);
-    padding: 16px;
     background: var(--colorWhite);
+    padding: 16px;
 
     h1 {
         font-family: Mansfield-SemiBold;
@@ -16,12 +16,11 @@
     }
 
     .myAppointmentsList {
-        max-width: 1200px;
+        max-width: 1900px;
         margin: 0 auto;
         width: 100%;
-        display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        flex-direction: column;
         gap: 16px;
         padding: 0 16px;
     }
