--- a/src/pages/private/requestAppointment/requestAppointment.scss
+++ b/src/pages/private/requestAppointment/requestAppointment.scss
@@ -1,6 +1,35 @@
 .requestAppointment {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    width: 100%;
+    min-height: 100%;
+    height: auto;
+    border: 2px solid var(--colorBlack);
+    background: var(--colorWhite);
+    padding: 16px;
+
+    h1 {
+        font-family: Mansfield-SemiBold;
+        font-size: 28px;
+        color: var(--colorBlack);
+    }
+
+    .requestAppointmentList {
+        max-width: 1400px;
+        margin: 0 auto;
+        width: 100%;
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        gap: 16px;
+        padding: 0 16px;
+    }
+}
+
+.requestAppointmentAlertModal {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
