--- a/src/components/bigCalendar/bigCalendar.scss
+++ b/src/components/bigCalendar/bigCalendar.scss
@@ -9,7 +9,7 @@
     padding: 5px;
     background-color: transparent;
     color: var(--colorBlack);
-    font-family: Mansfield;
+    font-family: Mansfield-SemiBold;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
