--- a/src/pages/private/requestAppointment/requestAppointment.scss
+++ b/src/pages/private/requestAppointment/requestAppointment.scss
@@ -26,7 +26,7 @@
         gap: 16px;
     }
 
-    .notFoundDisponibilities {
+    .notFoundAvailabilities {
         display: flex;
         justify-content: center;
         align-items: center;
